basic paragraph based truncation
does not account for actual line length

--- a/blog.html
+++ b/blog.html
@@ -125,55 +125,7 @@
 <p>posts</p>
 <p>span</p>
 <p>too</p>
-<p>many</p>
-<p>lines</p>
-<p>that</p>
-<p>will</p>
-<p>make</p>
-<p>the</p>
-<p>main</p>
-<p>blog</p>
-<p>page</p>
-<p>very</p>
-<p>cluttered</p>
-<p>and</p>
-<p>just</p>
-<p>a</p>
-<p>ridiculous</p>
-<p>mess.</p>
-<p>That </p>
-<p>is</p>
-<p>why</p>
-<p>posts</p>
-<p>will</p>
-<p>be</p>
-<p>displayed</p>
-<p>on</p>
-<p>the</p>
-<p>main</p>
-<p>page</p>
-<p>truncated</p>
-<p>to</p>
-<p>a</p>
-<p>specific</p>
-<p>number</p>
-<p>of</p>
-<p>lines</p>
-<p>and</p>
-<p>you</p>
-<p>will</p>
-<p>just</p>
-<p>have</p>
-<p>to</p>
-<p>click</p>
-<p>the</p>
-<p>title</p>
-<p>to</p>
-<p>view</p>
-<p>the</p>
-<p>entire</p>
-<p>post.</p>
-
+<a href="testing-a-long-blog-post.html"><font color=#FFFFFF>Continue reading</font></a>
 
 </div><!-- /.blog-post -->
 <div class="blog-post">
