put useful alt names on the twotoner page

--- a/AlanDuongCom/Data/twotoner.html
+++ b/AlanDuongCom/Data/twotoner.html
@@ -7,26 +7,26 @@
 			<p>I use this mostly for my personal desktop wallpapers. Some background images looked nice, but made it difficult to see desktop icons on. Additionally, I like multi-monitor setups and have a rotation of images, so I think it looks nicer if all my desktop backgrounds have a unified color scheme and style. Finally, I like the two-color, high-contrast art style.</p>
 
 			I wanted an art style resembling:<br />
-			<img src="content/img/christmas_carol_03.jpg" class="img-fluid" alt="Responsive image">
+			<img src="content/img/christmas_carol_03.jpg" class="img-fluid" alt="A Christmas Carol">
 			<br />
 			or
 			<br />
-			<img src="content/img/tracerbullet.png" class="img-fluid" alt="Responsive image">
+			<img src="content/img/tracerbullet.png" class="img-fluid" alt="Tracer Bullet">
 
 			<br /><br />
 
 			Given the source image:<br />
-			<img src="content/img/pziv.jpg" class="img-fluid" alt="Responsive image">
+			<img src="content/img/pziv.jpg" class="img-fluid" alt="Panzer IV src">
 			<br /><br />
 
 			Simply recoloring and rescaling (maintaining the aspect ratio) the image to my monitor's resolution (1920x1080) results in:<br />
-			<img src="content/img/pziv_unsmoothed.png" class="img-fluid" alt="Responsive image">
+			<img src="content/img/pziv_unsmoothed.png" class="img-fluid" alt="Panzer IV unsmoothed">
 			It is very clear where the image ends, and it looks very ugly.
 
 			<br /><br />
 
 			With the edge smoothing applied:<br />
-			<img src="content/img/pziv_smoothed.png" class="img-fluid" alt="Responsive image">
+			<img src="content/img/pziv_smoothed.png" class="img-fluid" alt="Panzer IV smoothed">
 
 			<br />
 
