--- a/test-post.html
+++ b/test-post.html
@@ -111,7 +111,7 @@
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p>This is a test blog post. </p>
-<p>https://i.imgur.com/AbvsrJA.png</p>
+<img src="https://i.imgur.com/AbvsrJA.png" class="img-fluid" alt="https://i.imgur.com/AbvsrJA.png">
 
 
 </div><!-- /.blog-post -->
