--- a/blog.html
+++ b/blog.html
@@ -117,7 +117,7 @@
 			</h3>
 
 			<div class="blog-post">
-	<h2 class="blog-post-title"><a href="testing-a-long-blog-post.html"><font color=#FFFFFF>Testing a Long Blog Post</font></a></h2>
+	<h2 class="blog-post-title"><a href="blog/testing-a-long-blog-post.html"><font color=#FFFFFF>Testing a Long Blog Post</font></a></h2>
 	<p class="blog-post-meta">Tuesday, April 14, 2020</p>
 
 	<p>Just a long test post to test post truncation on the main blog page.</p>
@@ -125,11 +125,11 @@
 <p>posts</p>
 <p>span</p>
 <p>too</p>
-<a href="testing-a-long-blog-post.html"><font color=#FFFFFF>Continue reading</font></a>
+<a href="blog/testing-a-long-blog-post.html"><font color=#FFFFFF>Continue reading</font></a>
 
 </div><!-- /.blog-post -->
 <div class="blog-post">
-	<h2 class="blog-post-title"><a href="test-post-2.html"><font color=#FFFFFF>Test Post 2</font></a></h2>
+	<h2 class="blog-post-title"><a href="blog/test-post-2.html"><font color=#FFFFFF>Test Post 2</font></a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p>This is another test blog post. </p>
@@ -138,7 +138,7 @@
 
 </div><!-- /.blog-post -->
 <div class="blog-post">
-	<h2 class="blog-post-title"><a href="test-post.html"><font color=#FFFFFF>Test Post</font></a></h2>
+	<h2 class="blog-post-title"><a href="blog/test-post.html"><font color=#FFFFFF>Test Post</font></a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p>This is a test blog post. </p>
