--- a/blog-posts/testing-a-long-blog-post.html
+++ b/blog-posts/testing-a-long-blog-post.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>SUPERCRUISE - alanduong.com</title>
+	<title>Testing a Long Blog Post - alanduong.com</title>
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -74,28 +74,28 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-	<a class="nav-link" href="index">Index</a>
+	<a class="nav-link" href="../index">Index</a>
 </li>
 <li class="nav-item dropdown">
 	<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
 	<div class="dropdown-menu" aria-labelledby="dropdown01">
-		<a class="dropdown-item" href="supercruise">SUPERCRUISE</a>
-<a class="dropdown-item" href="twotoner">TwoToner</a>
-<a class="dropdown-item" href="dominocomputer">DominoComputer</a>
-<a class="dropdown-item" href="springy-sanic">Springy Sanic</a>
-<a class="dropdown-item" href="alanduong-com">alanduong.com</a>
+		<a class="dropdown-item" href="../supercruise">SUPERCRUISE</a>
+<a class="dropdown-item" href="../twotoner">TwoToner</a>
+<a class="dropdown-item" href="../dominocomputer">DominoComputer</a>
+<a class="dropdown-item" href="../springy-sanic">Springy Sanic</a>
+<a class="dropdown-item" href="../alanduong-com">alanduong.com</a>
 
 	</div>
 </li>
 <li class="nav-item dropdown">
 	<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</a>
 	<div class="dropdown-menu" aria-labelledby="dropdown01">
-		<a class="dropdown-item" href="mil-moa-calculator">MIL/MOA Calculator</a>
+		<a class="dropdown-item" href="../mil-moa-calculator">MIL/MOA Calculator</a>
 
 	</div>
 </li>
 <li class="nav-item">
-	<a class="nav-link" href="blog">Blog</a>
+	<a class="nav-link" href="../blog">Blog</a>
 </li>
 
 			</ul>
@@ -106,28 +106,66 @@
 
 	<!-- Page Content -->
 	<main role="main" class="container">
-		<div class="container">
-	<div class="row">
-		<div class="col-sm-6">
-			<h1>SUPERCRUISE</h1>
-			<p>Fairly simple shoot 'em up game. </p>
+		<div class="blog-post">
+	<h2 class="blog-post-title"><a href="testing-a-long-blog-post"><font color=#FFFFFF>Testing a Long Blog Post</font></a></h2>
+	<p class="blog-post-meta">Tuesday, April 14, 2020</p>
 
-			<p>I wanted to make the enemies shoot bullets and missiles and whatnot but then the game became incredibly difficult.</p>
+	<p>Just a long test post to test post truncation on the main blog page.</p>
+<p>If</p>
+<p>posts</p>
+<p>span</p>
+<p>too</p>
+<p>many</p>
+<p>lines</p>
+<p>that</p>
+<p>will</p>
+<p>make</p>
+<p>the</p>
+<p>main</p>
+<p>blog</p>
+<p>page</p>
+<p>very</p>
+<p>cluttered</p>
+<p>and</p>
+<p>just</p>
+<p>a</p>
+<p>ridiculous</p>
+<p>mess.</p>
+<p>That </p>
+<p>is</p>
+<p>why</p>
+<p>posts</p>
+<p>will</p>
+<p>be</p>
+<p>displayed</p>
+<p>on</p>
+<p>the</p>
+<p>main</p>
+<p>page</p>
+<p>truncated</p>
+<p>to</p>
+<p>a</p>
+<p>specific</p>
+<p>number</p>
+<p>of</p>
+<p>lines</p>
+<p>and</p>
+<p>you</p>
+<p>will</p>
+<p>just</p>
+<p>have</p>
+<p>to</p>
+<p>click</p>
+<p>the</p>
+<p>title</p>
+<p>to</p>
+<p>view</p>
+<p>the</p>
+<p>entire</p>
+<p>post.</p>
 
-			<p>Written in C++ using OpenFrameworks.</p>
 
-			View this on <a href="https://github.com/Awcmon/SUPERCRUISE">GitHub</a>
-			<br />
-			View this on <a href="https://awcmon.itch.io/supercruise">itch.io</a>
-		</div>
-		<div class="col-sm-6">
-			<div class="embed-responsive embed-responsive-4by3">
-				<iframe width="600" height="450" src="https://www.youtube.com/embed/qTNdNdwlAzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-			<p>The video is in 60 fps, but the embed may not play in 60 fps.</p>
-		</div>
-	</div>
-</div>
+</div><!-- /.blog-post -->
 
 	</main>
 
