Revert "clean up URLs"
This reverts commit 4ec594a0ee37dbd778f9a79c262dff480d9e2f79.

--- a/blog.html
+++ b/blog.html
@@ -74,28 +74,28 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-	<a class="nav-link" href="index">Index</a>
+	<a class="nav-link" href="index.html">Index</a>
 </li>
 <li class="nav-item dropdown">
 	<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
 	<div class="dropdown-menu" aria-labelledby="dropdown01">
-		<a class="dropdown-item" href="supercruise">SUPERCRUISE</a>
-<a class="dropdown-item" href="twotoner">TwoToner</a>
-<a class="dropdown-item" href="dominocomputer">DominoComputer</a>
-<a class="dropdown-item" href="springy-sanic">Springy Sanic</a>
-<a class="dropdown-item" href="alanduong-com">alanduong.com</a>
+		<a class="dropdown-item" href="supercruise.html">SUPERCRUISE</a>
+<a class="dropdown-item" href="twotoner.html">TwoToner</a>
+<a class="dropdown-item" href="dominocomputer.html">DominoComputer</a>
+<a class="dropdown-item" href="springy-sanic.html">Springy Sanic</a>
+<a class="dropdown-item" href="alanduong-com.html">alanduong.com</a>
 
 	</div>
 </li>
 <li class="nav-item dropdown">
 	<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</a>
 	<div class="dropdown-menu" aria-labelledby="dropdown01">
-		<a class="dropdown-item" href="mil-moa-calculator">MIL/MOA Calculator</a>
+		<a class="dropdown-item" href="mil-moa-calculator.html">MIL/MOA Calculator</a>
 
 	</div>
 </li>
 <li class="nav-item active">
-	<a class="nav-link" href="blog">
+	<a class="nav-link" href="blog.html">
 		Blog
 		<span class="sr-only">(current)</span>
 	</a>
@@ -117,7 +117,7 @@
 			</h3>
 
 			<div class="blog-post">
-	<h2 class="blog-post-title"><a href="blog-posts/testing-a-long-blog-post"><font color=#FFFFFF>Testing a Long Blog Post</font></a></h2>
+	<h2 class="blog-post-title"><a href="blog/testing-a-long-blog-post.html"><font color=#FFFFFF>Testing a Long Blog Post</font></a></h2>
 	<p class="blog-post-meta">Tuesday, April 14, 2020</p>
 
 	<p>Just a long test post to test post truncation on the main blog page.</p>
@@ -125,11 +125,11 @@
 <p>posts</p>
 <p>span</p>
 <p>too</p>
-<a href="blog-posts/testing-a-long-blog-post"><font color=#FFFFFF>Continue reading</font></a>
+<a href="blog/testing-a-long-blog-post.html"><font color=#FFFFFF>Continue reading</font></a>
 
 </div><!-- /.blog-post -->
 <div class="blog-post">
-	<h2 class="blog-post-title"><a href="blog-posts/test-post-2"><font color=#FFFFFF>Test Post 2</font></a></h2>
+	<h2 class="blog-post-title"><a href="blog/test-post-2.html"><font color=#FFFFFF>Test Post 2</font></a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p>This is another test blog post. </p>
@@ -138,7 +138,7 @@
 
 </div><!-- /.blog-post -->
 <div class="blog-post">
-	<h2 class="blog-post-title"><a href="blog-posts/test-post"><font color=#FFFFFF>Test Post</font></a></h2>
+	<h2 class="blog-post-title"><a href="blog/test-post.html"><font color=#FFFFFF>Test Post</font></a></h2>
 	<p class="blog-post-meta">Monday, April 13, 2020</p>
 
 	<p>This is a test blog post. </p>
