--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
-	<a class="nav-link" href="index">
+	<a class="nav-link" href="index.html">
 		Index
 		<span class="sr-only">(current)</span>
 	</a>
@@ -82,23 +82,23 @@
 <li class="nav-item dropdown">
 	<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
 	<div class="dropdown-menu" aria-labelledby="dropdown01">
-		<a class="dropdown-item" href="supercruise">SUPERCRUISE</a>
-<a class="dropdown-item" href="twotoner">TwoToner</a>
-<a class="dropdown-item" href="dominocomputer">DominoComputer</a>
-<a class="dropdown-item" href="springy-sanic">Springy Sanic</a>
-<a class="dropdown-item" href="alanduong-com">alanduong.com</a>
+		<a class="dropdown-item" href="supercruise.html">SUPERCRUISE</a>
+<a class="dropdown-item" href="twotoner.html">TwoToner</a>
+<a class="dropdown-item" href="dominocomputer.html">DominoComputer</a>
+<a class="dropdown-item" href="springy-sanic.html">Springy Sanic</a>
+<a class="dropdown-item" href="alanduong-com.html">alanduong.com</a>
 
 	</div>
 </li>
 <li class="nav-item dropdown">
 	<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</a>
 	<div class="dropdown-menu" aria-labelledby="dropdown01">
-		<a class="dropdown-item" href="mil-moa-calculator">MIL/MOA Calculator</a>
+		<a class="dropdown-item" href="mil-moa-calculator.html">MIL/MOA Calculator</a>
 
 	</div>
 </li>
 <li class="nav-item">
-	<a class="nav-link" href="blog">Blog</a>
+	<a class="nav-link" href="blog.html">Blog</a>
 </li>
 
 			</ul>
