--- a/AlanDuongCom/Data/defaultTemplate.html
+++ b/AlanDuongCom/Data/defaultTemplate.html
@@ -62,7 +62,7 @@
 
 </head>
 
-<body style="background-color:#262626;color:#BFBFBF">
+<body style="background-color:#262626;color:#DFDFDF">
 
 	<!-- Navigation -->
 	#NAV#
