--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 </head>
 
-<body style="background-color:#262626;color:#BFBFBF">
+<body style="background-color:#262626;color:#DFDFDF">
 
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
