added TDS2 lighting blog post

--- a/blog.html
+++ b/blog.html
@@ -117,6 +117,17 @@
 			</h3>
 
 			<div class="blog-post">
+	<h2 class="blog-post-title"><a href="blog/tds2--the-past-3-weeks-of-lighting.html"><font color=#FFFFFF>TDS2: The past 3 weeks of lighting</font></a></h2>
+	<p class="blog-post-meta">Monday, May 18, 2020</p>
+
+	<p>There hasn't been a blog post in a while because on top of my game development, I have been busy working 57 hours a week across two dead-end jobs to try to keep my finances afloat while I continue on my search for a software development job.</p>
+<p>I have been working on a top-down shooter. I don't want to talk too much about the plans and would rather have the current work speak for itself, because things are always subject to change as the game becomes more fleshed out.</p>
+<p>Currently, it doesn't even have a name. It's simply called TDS2 for Top Down Shooter 2. Yes, there was a TDS1.</p>
+<p>I figure I would describe the development of the project so far in general terms, not going too heavily into the details.</p>
+<h3>By April 20th</h3><a href="blog/tds2--the-past-3-weeks-of-lighting.html"><font color=#FFFFFF>Continue reading</font></a>
+
+</div><!-- /.blog-post -->
+<div class="blog-post">
 	<h2 class="blog-post-title"><a href="blog/unity-universal-rendering-pipeline-2d-lighting-tools-as-of-april-25--2020.html"><font color=#FFFFFF>Unity Universal Rendering Pipeline 2D Lighting Tools as of April 25, 2020</font></a></h2>
 	<p class="blog-post-meta">Sunday, April 26, 2020</p>
 
