tds2 new cam mode blog post

--- a/blog.html
+++ b/blog.html
@@ -117,6 +117,16 @@
 			</h3>
 
 			<div class="blog-post">
+	<h2 class="blog-post-title"><a href="blog/tds2--the--i-actually-wanted-to-make-a-first-person-shooter--camera-mode.html"><font color=#FFFFFF>TDS2: The "I actually wanted to make a first-person shooter" Camera Mode</font></a></h2>
+	<p class="blog-post-meta">Tuesday, May 19, 2020</p>
+
+	<p>When the camera is centered on the player, more than half of the entire screen is completely wasted space, because I do not intend for the player to be able to see behind themselves. This is a deliberate design choice to make the game feel more claustrophobic, tense, and uncertain.</p>
+<p>I devised a new system to make better use of screen space and honestly it's easier to show than describe. Here's a video.</p>
+<div class="embed-responsive embed-responsive-16by9"><iframe width="560" height="315" src="https://www.youtube.com/embed/9kMgmdcfzPU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><p>This was a pretty quick implementation to get a feel for it. Personally, I like it, and might make this the default camera mode. I do not feel like wasting over half the screen space is very acceptable. This also frees up the mouse's y-axis, but I do not have any ideas for it currently.</p>
+
+
+</div><!-- /.blog-post -->
+<div class="blog-post">
 	<h2 class="blog-post-title"><a href="blog/tds2--the-past-3-weeks-of-lighting.html"><font color=#FFFFFF>TDS2: The past 3 weeks of lighting</font></a></h2>
 	<p class="blog-post-meta">Monday, May 18, 2020</p>
 
