--- a/supercruise2.html
+++ b/supercruise2.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>alanduong.com - alanduong.com</title>
+	<title>SUPERCRUISE2 - alanduong.com</title>
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -108,21 +108,46 @@
 	<!-- Page Content -->
 	<main role="main" class="container">
 		<div class="container">
-	<div class="row"">
-		<div class="col-lg-12">
-			<h1>alanduong.com</h1>
-			<p>This site was created with a static site generator I wrote in C#.</p>
+	<div class="row">
+		<div class="col-sm-6">
+			<h1>SUPERCRUISE 2</h1>
+			<p>I thought the original SUPERCRUISE felt good, but didn't have enough substance. I couldn't sell it.</p>
 
-			<p>There's a billion static site generators out there but I ended up writing my own because I wanted something simple. I can write this website like I would with plain HTML and CSS, except the especially tedious parts are automated. In its current state, this is definitely tailored towards this website and that will not be changing because I doubt anybody else would want to use this.</p>
+			<p>OpenFrameworks also had its own problems that made it difficult for me to implement certain quality of life features (different resolutions changable on runtime, borderless windows, easy screen stretching, etc) and whether or not the executable's ability to run was a bit finnicky. I switched to Unity.</p>
 
-			<p>I mostly just prefer the workflow. I can do all my work in Visual Studio then just hit the run button and my site pops out in a second.</p>
+			<p>Planes should shoot at you and not just ram into you. I didnt want enemy planes to just leisurely float by, hurling bullets at the player at the speed of a snowball. Planes move fast and bullets move fast so I wanted this game to be fast.</p>
 
-			<p>View this on <a href="https://github.com/Awcmon/Awcmon.github.io">GitHub</a></p>
+			<p>The warning indicators allow everything to move fast while still giving the player the time to react. It tries to, anyways. That's the core of the game.</p>
 
+			<p>The best way to test if a game is viable and fun is to make it and play it. And so, I teamed up with a friend to help me with the art and made a prototype.</p>
+		</div>
+		<div class="col-sm-6">
+			<div class="embed-responsive embed-responsive-4by3">
+				<iframe width="600" height="450" src="https://www.youtube.com/embed/JvM2xDigfQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 		</div>
 	</div>
-</div> 
+	<div class="row">
+		<div class="col-sm-6">
+			<h1>SUPERCRUISE 3</h1>
+			<p>It wasn't fun.</p>
 
+			<p>I sent it to a number of my friends who I trusted to give me honest feedback. They confirmed what I felt in my heart-- it was the sort of game where if you're asked if it's "good or bad," you might say, "well, it isn't <i>bad</i>." However, if the question was, "would you want to play more?" the answer would be quick "no."</p>
+
+			<p>I tried to think of a way to make it more fun. I thought that the main problem is that simply dodging is boring. The player should be incentivized to kill enemies, and simply having a points system isn't enough to encourage that. I could make it so enemy planes circle back after they buzz past you, but something like that just feels awkward (it's strange that the player is only moving in a straight like when nothing else is) and is hard to convey to the player (it isn't so obvious that the enemy coming from behind you is the same one that passed you from the front 30 seconds ago).</p>
+
+			<p>This game was fundamentally flawed. There was no other solution than to cut my losses-- I would never find this game fun.</p>
+
+			<p>For many people, it hurts to throw away your own hard work. I've personally done that many times, so I've gotten over it long ago. However, I couldn't stand throwing away the art my friend drew for this game. I tried to visualize a game using his art that I would find fun. While showering, I came up with something, and the following video (work in progress!) is my attempt to bring that vision to life.</p>
+		</div>
+		<div class="col-sm-6">
+			<div class="embed-responsive embed-responsive-4by3">
+				<iframe width="600" height="450" src="https://www.youtube.com/embed/7SRvLfnZvIg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				This video will change as I develop the game.
+			</div>
+		</div>
+	</div>
+</div>
 	</main>
 
 	<!-- Bootstrap core JavaScript -->
