fix some typos, etc

--- a/supercruise2.html
+++ b/supercruise2.html
@@ -134,16 +134,16 @@
 
 			<p>I sent it to a number of my friends who I trusted to give me honest feedback. They confirmed what I felt in my heart-- it was the sort of game where if you're asked if it's "good or bad," you might say, "well, it isn't <i>bad</i>." However, if the question was, "would you want to play more?" the answer would be quick "no."</p>
 
-			<p>I tried to think of a way to make it more fun. I thought that the main problem is that simply dodging is boring. The player should be incentivized to kill enemies, and simply having a points system isn't enough to encourage that. I could make it so enemy planes circle back after they buzz past you, but something like that just feels awkward (it's strange that the player is only moving in a straight like when nothing else is) and is hard to convey to the player (it isn't so obvious that the enemy coming from behind you is the same one that passed you from the front 30 seconds ago).</p>
+			<p>I tried to think of a way to make it more fun. I thought that the main problem is that simply dodging is boring. The player should be incentivized to kill enemies, and simply having a points system isn't enough to encourage that. I could make it so enemy planes circle back after they buzz past you, but something like that just feels awkward (it's strange that the only player is moving in a straight line when nothing else is) and is hard to convey to the player (it isn't so obvious that the enemy coming from behind you is the same one that passed you from the front 30 seconds ago).</p>
 
-			<p>This game was fundamentally flawed. There was no other solution than to cut my losses-- I would never find this game fun.</p>
+			<p>SUPERCRUISE 2 was fundamentally flawed. There was no other solution than to cut my losses-- I would never find this game fun.</p>
 
 			<p>For many people, it hurts to throw away your own hard work. I've personally done that many times, so I've gotten over it long ago. However, I couldn't stand throwing away the art my friend drew for this game. I tried to visualize a game using his art that I would find fun. While showering, I came up with something, and the following video (work in progress!) is my attempt to bring that vision to life.</p>
 		</div>
 		<div class="col-sm-6">
 			<div class="embed-responsive embed-responsive-4by3">
 				<iframe width="600" height="450" src="https://www.youtube.com/embed/7SRvLfnZvIg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				This video will change as I develop the game.
+				<p>This video will change as I develop the game.</p>
 			</div>
 		</div>
 	</div>
