--- a/tds4.html
+++ b/tds4.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Blog - alanduong.com</title>
+	<title>TDS4 - alanduong.com</title>
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -96,11 +96,8 @@
 
 	</div>
 </li>
-<li class="nav-item active">
-	<a class="nav-link" href="blog.html">
-		Blog
-		<span class="sr-only">(current)</span>
-	</a>
+<li class="nav-item">
+	<a class="nav-link" href="blog.html">Blog</a>
 </li>
 
 			</ul>
@@ -111,20 +108,27 @@
 
 	<!-- Page Content -->
 	<main role="main" class="container">
-		<main role="main" class="container">
+		<div class="container">
 	<div class="row">
-		<div class="col-md-12 blog-main">
-			<h3 class="pb-3 mb-4 font-italic border-bottom">
-				Personal blog mainly about computer-related things.
-			</h3>
+		<div class="col-sm-6">
+			<h1>TDS4</h1>
+			<p>When I make a game, I try to make something I'd want to play and can't just buy on Steam or something.</p>
 
-			
+			<p>I wanted a game that had the following things: high lethality (makes for very decisive combat), the difficulty of ammo management under stress (needing to keep track of magazines, how much ammo they each have, and in what slot/pouch they're in), and night combat with a white light (you need it to see your enemies, but using it makes it very easy for the enemy to see you.</p>
 
-		</div><!-- /.blog-main -->
+			<p>The basic gameplay premise is that the player would need to intelligently move across the map, ambushing enemies from unexpected angles with the assistance of the darkness, to defeat an otherwise insurmountable opponent. A combat-focused stealth game in other words.</p>
 
-	</div><!-- /.row -->
+			<p>Unity's 2D lighting system (at least at the time) was pretty awful for this type of game, so I had to make my own. I am quite pleased with how it ended up though.</p>
 
-</main><!-- /.container -->
+			<p>Ultimately, my vision for this game was too ambitious. I wanted the AI to be incredibly intelligent to faciliate this type of gameplay, and I figured this game was better left on the backburner while I accrued more experience making simpler games.</p>
+		</div>
+		<div class="col-sm-6">
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/k_TQ2ornHcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+</div>
 
 	</main>
 
