--- a/mil-moa-calculator.html
+++ b/mil-moa-calculator.html
@@ -80,6 +80,7 @@
 	<a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
 	<div class="dropdown-menu" aria-labelledby="dropdown01">
 		<a class="dropdown-item" href="supercruise2.html">SUPERCRUISE2</a>
+<a class="dropdown-item" href="tds4.html">TDS4</a>
 <a class="dropdown-item" href="supercruise.html">SUPERCRUISE</a>
 <a class="dropdown-item" href="twotoner.html">TwoToner</a>
 <a class="dropdown-item" href="dominocomputer.html">DominoComputer</a>
