--- a/AlanDuongCom/Data/supercruise2.html
+++ b/AlanDuongCom/Data/supercruise2.html
@@ -4,7 +4,7 @@
 			<h1>SUPERCRUISE 2</h1>
 			<p>I thought the original SUPERCRUISE felt good, but didn't have enough substance. I couldn't sell it.</p>
 
-			<p>OpenFrameworks also had its own problems that made it difficult for me to implement certain quality of life features (different resolutions changable on runtime, borderless windows, easy screen stretching, etc) and whether or not the executable's ability to run was a bit finnicky. I switched to Unity.</p>
+			<p>OpenFrameworks also had its own problems that made it difficult for me to implement certain quality of life features (different resolutions changable on runtime, borderless windows, easy screen stretching, etc) and the executable's ability to actually run was a bit finnicky. I switched to Unity.</p>
 
 			<p>Planes should shoot at you and not just ram into you. I didnt want enemy planes to just leisurely float by, hurling bullets at the player at the speed of a snowball. Planes move fast and bullets move fast so I wanted this game to be fast.</p>
 
