--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <div class="container">
 	<!--<div class="background-media-container" style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; -webkit-mask-image: -webkit-linear-gradient(top, white 20%, transparent 99%); top: 0px; right: 0px; bottom: 0px; left: 0px; filter: blur(3px) brightness(70%);"><video muted loop="" autoplay="" src="content/bg.mp4" style="position: absolute; height: auto; width: auto; min-width: 100%; min-height: 100%; max-width: 10000%; max-height: 10000%; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;"></video></div>
 		-->
-	<div class="background-media-container" style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; top: 0px; right: 0px; bottom: 0px; left: 0px; filter: blur(1px) brightness(70%);"><video muted loop="" autoplay="" src="content/bg.mp4" style="position: absolute; height: auto; width: auto; min-width: 100%; min-height: 100%; max-width: 10000%; max-height: 10000%; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;"></video></div>
+	<div class="background-media-container" style="position: absolute; overflow: hidden; z-index: 0; pointer-events: none; top: 0px; right: 0px; bottom: 0px; left: 0px; filter: blur(1px) brightness(70%);"><video muted loop="" autoplay="" src="content/bg_070721.mp4" style="position: absolute; height: auto; width: auto; min-width: 100%; min-height: 100%; max-width: 10000%; max-height: 10000%; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;"></video></div>
 
 	<div class="row" style="color:#FFFFFF">
 		<div class="col-lg-12 text-center">
