--- a/supercruise2.html
+++ b/supercruise2.html
@@ -153,7 +153,7 @@
 		</div>
 		<div class="col-sm-6">
 			<div class="embed-responsive embed-responsive-16by9">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/VQ3zGLMdtyY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/PJqWpDse-o4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			<p>This video will change as I develop the game.</p>
 		</div>
