--- a/supercruise2.html
+++ b/supercruise2.html
@@ -137,9 +137,9 @@
 
 			<p>It wasn't fun.</p>
 
-			<p>I sent it to a number of my friends who I trusted to give me honest feedback. They confirmed what I felt in my heart-- it was the sort of game where if you're asked if it's "good or bad," you might say, "well, it isn't <i>bad</i>." However, if the question was, "would you want to play more?" the answer would be quick "no."</p>
+			<p>I sent it to a number of my friends who I trusted to give me honest feedback. They confirmed what I felt in my heart-- it was the sort of game where if you're asked if it's "good or bad," you might say, "well, it isn't <i>awful</i>." However, if the question was, "would you want to play more?" the answer would be a prompt "no."</p>
 
-			<p>I tried to think of a way to make it more fun. I thought that the main problem is that simply dodging is boring. The player should be incentivized to kill enemies, and simply having a points system isn't enough to encourage that. I could make it so enemy planes circle back after they buzz past you, but something like that just feels awkward (it's strange that the only player is moving in a straight line when nothing else is) and is hard to convey to the player (it isn't so obvious that the enemy coming from behind you is the same one that passed you from the front 30 seconds ago).</p>
+			<p>I tried to think of a way to make it more fun. I thought that the main problem is that simply dodging is boring. The gameplay largely consisted of just staring at and trying to decipher the shot patterns. The player should be incentivized to destroy enemies and simply having a points system isn't enough to encourage that. I could make it so enemy planes circle back after they buzz past the player, but something like that just feels awkward (it's strange that the only player is moving in a straight line when nothing else is) and is hard to convey to the player (it isn't so obvious that the enemy coming from behind you is the same one that passed you from the front 30 seconds ago).</p>
 
 			<p>SUPERCRUISE 2 was fundamentally flawed. There was no other solution than to cut my losses-- I would never find this game fun.</p>
 		</div>
